<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pig_background"
    tools:context="jemin.uoregon.edu.piggame.Pig_Game">

    <LinearLayout
        android:id="@+id/playerOneLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_marginStart="64dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/playerOneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/player_one_label"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/playerOneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/player_one_text"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/playerOneScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/player_one_score_label"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playerOneScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75sp"
            android:text="@string/player_one_score"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerTwoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/playerOneLayout"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/playerTwoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:text="@string/player_two_label"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/playerTwoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/player_two_text"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/playerTwoScoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/player_two_score_label"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/playerTwoScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:text="@string/player_two_score"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/displayTurnLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/playerOneLayout"
        android:layout_toRightOf="@+id/playerOneLayout"
        android:layout_toEndOf="@+id/playerOneLayout">

        <TextView
            android:id="@+id/displayTurn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/display_turn"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/displayTurnLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/display_turn_label"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/diceImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/displayTurnLayout"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/pointDisplayLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diceImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pointDisplayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/point_display_label"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pointDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="155sp"
            android:text="@string/point_display"
            android:textColor="@android:color/background_light"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/rollButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playerOneLayout"
        android:layout_alignStart="@+id/playerOneLayout"
        android:layout_below="@+id/pointDisplayLayout"
        android:text="@string/roll_button"
        android:textSize="40sp" />

    <Button
        android:id="@+id/turnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_button"
        android:textSize="40sp"
        android:layout_above="@+id/newGameButton"
        android:layout_alignLeft="@+id/playerTwoLayout"
        android:layout_alignStart="@+id/playerTwoLayout" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_game_button"
        android:textSize="40sp"
        android:layout_below="@+id/rollButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/saveNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/save_name_button"
        android:textSize="10sp"
        android:layout_alignTop="@+id/playerTwoLayout"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
